make jpg smaller

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>PNG</h1>
   <pre id="png-output">(nothing yet)</pre>
   <script charset="utf-8">
-    formDataToText('jpg-output', './cannon-100px.jpg')
+    formDataToText('jpg-output', './small.jpg')
     formDataToText('png-output', './png-transparent.png')
 
     async function formDataToText(outputElementId, imagePath) {
